--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -16,6 +16,11 @@
 	font-size: 18px;
 }
 
+.rightBlock {
+	display: flex;
+	align-items: center;
+}
+
 .button {
 	background-color: rgba(28, 28, 28, 0);
 	cursor: pointer;
@@ -24,14 +29,50 @@
 }
 
 .buttonSignIn {
+	text-decoration: none;
 	border: none;
 	color: rgba(0, 0, 0, 0.85);
 	margin-right: 19px;
 }
 
 .buttonSignUp {
-	color: rgba(82, 196, 26, 1);
-	border: solid 1px rgba(82, 196, 26, 1);
+	text-decoration: none;
+	color: #52c41a;
+	border: solid 1px #52c41a;
 	border-radius: 5px;
 	padding: 10px 18px;
+}
+
+.buttonCreateArticle {
+	text-decoration: none;
+	color: #52c41a;
+	border: solid 1px #52c41a;
+	font-size: 14px;
+	line-height: 22px;
+	border-radius: 5px;
+	padding: 6px 10px;
+	margin-right: 27px;
+}
+
+.username {
+	margin: 0;
+	margin-right: 13px;
+	text-decoration: none;
+	color: rgba(0, 0, 0, 0.85);
+	font-size: 18px;
+	line-height: 28px;
+}
+
+.userLogo {
+	max-width: 46px;
+	margin-right: 27px;
+}
+
+.buttonLogOut {
+	text-decoration: none;
+	line-height: 28px;
+	color: rgba(0, 0, 0, 0.75);
+	border: solid 1px rgba(0, 0, 0, 0.75);
+	border-radius: 5px;
+	padding: 8px 18px;
 }
