--- a/src/components/MiniArticle/MiniArticle.module.scss
+++ b/src/components/MiniArticle/MiniArticle.module.scss
@@ -34,6 +34,13 @@
 	color: rgba(0, 0, 0, 0.75);
 }
 
+.likeButton {
+	background-color: transparent;
+	border: none;
+	cursor: pointer;
+	padding: 0;
+}
+
 .likesCount {
 	font-size: 12px;
 }
